--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 				<ul>
 					<li>Gmail</li>
 					<li>Images</li>
-					<li>Menu</li>
+					<li><img src="images/box.png" /></li>
 					<li>Sign In</li>
 				</ul>
 			</div>
 			<div class = "search">
 				<img src="images/google_log.png" id ="google_logo"><br>
 				<div class = "sch_box">
-				</div><br>
-				<input type = "submit" value = "Google Search">
-				<input type = "submit" value = "I'm Feeling Lucky">
+					<input type = "form" id = "sch_qry">
+					<img src="images/mic.png" id = "mic">
+
+				</div>
+					<div class = "button">
+						<input type = "submit" value = "Google Search" id = "g_sch" >
+						<input type = "submit" value = "I'm Feeling Lucky" >
+					</div>
 				</div>
 			<div class = "footer">
 				<div class = "l_footer">
