--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html> 
+<html font-size = "small"> 
 
 	<head>
 
@@ -16,7 +16,7 @@
 					<li>Gmail</li>
 					<li>Images</li>
 					<li><img src="images/box.png" /></li>
-					<li>Sign In</li>
+					<li  style = "color:white" id = "signin">Sign In</li>
 				</ul>
 			</div>
 			<div class = "search">
